# streamlit-audio-recorder

./: .gitignore  pyproject.toml
streamlit_audio_recorder/: __init__.py
streamlit_audio_recorder/frontend/: package-lock.json
streamlit_audio_recorder/frontend/src/: StreamlitAudioRecorder.tsx
streamlit_audio_recorder/frontend/src/audio-react-recorder-chunks/src/: index.js
